# sds-lite

./: .gitignore  README.md  app.py  mcp_registry.json  pyproject.toml
assemblers/: __init__.py  dashboard_assembler.py  excel_assembler.py  word_assembler.py
mock_data/: datasets.json  sample_rows.json  schemas.json
router/: __init__.py  audit.py  classifier.py  executor.py  skill_loader.py
servers/: gitlab_server.py  platform_server.py  suadeo_sds_server.py
skills/: catalogue.md  code-review.md  dashboard.md  etl.md  report.md  suadeo-catalogue.md  suadeo-code-review.md  suadeo-dashboard.md  suadeo-etl.md  suadeo-report.md  suadeo-test-data.md  test-data.md
tools/: __init__.py  analyze_code_quality.py  generate_chart.py  get_user_context.py  mcp_gateway.py  read_document.py  registry.py  web_fetch.py  web_search.py
